app/src/main/java/com/example/androidtestcase/data/error/BaseApiError.kt
package com.example.androidtestcase.data.error

abstract class BaseApiError : Throwable()